--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,14 @@ dependencies:
 
   flutter_rating_bar: ^4.0.0
   get: ^4.6.5
+  get_storage: ^2.0.3
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
+
+  google_maps_flutter: ^2.1.7
+  geolocator: ^8.2.1
+  geocoding: ^2.0.4
 
 dev_dependencies:
   flutter_test:
