--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_maps_flutter: ^2.1.7
   geolocator: ^8.2.1
   geocoding: ^2.0.4
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
