--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
   get_storage: ^2.0.3
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
+  firebase_app_check: ^0.0.6+13
   cloud_firestore: ^3.1.17
 
   google_maps_flutter: ^2.1.7
   geolocator: ^8.2.1
   geocoding: ^2.0.4
   image_picker: ^0.8.5+3
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
