--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   image_picker: ^0.8.5+3
   fluttertoast: ^8.0.9
   geoflutterfire: ^3.0.3
-  custom_radio_grouped_button: ^2.1.2+1
+  custom_radio_grouped_button:
 
 dev_dependencies:
   flutter_test:
