--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   share_plus: ^4.0.7
   cached_network_image:
   custom_map_markers: ^0.0.2+1
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_test:
