--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
-name: park_benching
+name: parkbenching
 description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 1.0.1+2
+version: 1.0.5+6
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
